# product-space-FEM

./: .gitignore  README.md  Snakefile  crossvalidation.py  crossvalidation.sh  crossvalidation2.py  crossvalidation_results.qmd  crossvalidation_results.sh  debug.py  derivative_checker.ipynb  example_inference.ipynb  example_usage.ipynb  notebook.md  plot_crossvalidation.py  pyproject.toml  setup.cfg  setup.py  setup_crossval_grid.py  test.sh  test_inference_from_solution.ipynb  test_regularization.ipynb
docs/: Makefile  _config.yml  _toc.yml  api.md  development.md  introduction.md  meshes.ipynb  tutorial.ipynb  tutorial.md
examples/: adjoint_drift_diffusion.ipynb  coal_convergence_1d.ipynb  coal_convergence_2d.ipynb  drift_diffusion_exponential_solution.ipynb  drift_diffusion_polynomial_solution.ipynb  drift_diffusion_sinusoidal_solution.ipynb  exact_gradient.ipynb  lineage_hit_times.ipynb  poisson.ipynb
inference/: README.md  __init__.py
old_tests/: test_drift_diffusion.py  test_product_function_space.py
product_fem/: __init__.py  _version.py  assemblers.py  boundary_conditions.py  equations.py  forms.py  function_spaces.py  functions.py  inverse_problems.py  loss_functionals.py  meshes.py  plotting.py  product_fem.py  product_fem_adjoint.py  solvers.py  transforms.py
requirements/: ci-environment.yml  conda-environment.yml  development.txt
simulation/: .gitignore  README.md  Snakefile  compute_stats.py  compute_truth.qmd  crossvalidation.json  example_params.json  fast_slow.slim  fecundity_regulation.slim  make_index.py  plot_maps.py  (+4 more)
(+36 files in other folders)
