[metadata]
name = product_fem
author= Matt Lukac
author_email = mlukac@uoregon.edu
license = MIT
description= Solve equations on product function spaces.
long_description_content_type = text/x-markdown
long_description = file: README.md
url = https://github.com/kr-colab/product-space-FEM'
project_urls =
    Documentation = https://github.io/kr-colab/product-space-FEM
    Bug Tracker = https://github.com/kr-colab/product-space-FEM/issues
    Bug Tracker = https://github.com/kr-colab/product-space-FEM
classifiers =
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
keywords =
    numerical differential equations
    finite elements
    population genetics
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = product_fem
python_requires = >=3.8
include_package_data = True
install_requires =
    fenics
    matplotlib
    numpy
    scipy
setup_requires =
    numpy
    setuptools

[tool:pytest]
addopts = -n 4
testpaths =
    tests

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0
